Update perk description and header on membership page

--- a/ACM_General/home/templates/home/membership.html
+++ b/ACM_General/home/templates/home/membership.html
@@ -25,16 +25,18 @@
 {% block body_content %}
   <main>
     <div class="content-wrapper">
-      <h1 class="perks-header"><a name="top">ACM Membership Guarantees</a>
+      <h1 class="perks-header"><a name="top">ACM Membership Perks</a>
       </h1>
       <hr>
       <div class="perks">
           <div class="perks__perk">
             <img src="{% static "home/img/membership/tshirt-crew.svg" %}">
             <div class="perks__content">
-              <h3 class="perks__title">Free Shirt</h3>
+              <h3 class="perks__title">ACM Shirt</h3>
               <hr>
-              <div class="perks__description">Free ACM shirt every year</div>
+              <div class="perks__description">Student designed ACM shirt for the
+                  current year
+              </div>
           </div>
         </div>
           <div class="perks__perk">
@@ -42,15 +44,15 @@
               <div class="perks__content">
             <h3 class="perks__title">Discounts</h3>
             <hr>
-            <div class="perks__description">Cheap entry to ACM events</div>
+            <div class="perks__description">Discounted entry to ACM events</div>
           </div>
         </div>
           <div class="perks__perk">
               <img src="{% static "home/img/membership/tie.svg" %}">
               <div class="perks__content">
-            <h3 class="perks__title">ACM Dinner</h3>
+            <h3 class="perks__title">Career Fair Dinner</h3>
             <hr>
-            <div class="perks__description">Free dinner with business
+            <div class="perks__description">Exclusive dinner with industry 
               professionals
             </div>
           </div>
