GH#119 Add BATS as a 'Donor'

--- a/ACM_General/home/templates/home/sponsors.html
+++ b/ACM_General/home/templates/home/sponsors.html
@@ -34,6 +34,7 @@
                 Kansas City, Missouri, they regularly account for 5% of the
                 total trading volume in the US stock market.</p>
         </li>
+        
         <li class="cards__card">
           <a href="https://www.garmin.com/" class="card__link">
             <div class="card__image"
@@ -46,6 +47,19 @@
                 automotive, aviation, marine, outdoor, and sport activities and
                 utilities.</p>
         </li>
+
+        <li class="cards__card">
+            <a href="https://bats.com/" class="card__link">
+            <div class="card__image contain"
+                 style="background-image: url({% static "home/img/sponsors/bats-logo.png" %});"></div>
+              <h5 class="card__title">Bats | Donor</h5>
+              </a>
+              <p class="card__text">Bats, a CBOE company, is a global stock
+              exchange operator based in Lenexa, Kansas. Currently, Bats is the
+              second-largest U.S. equities market operator and operates
+              in both the U.S. and European markets.
+        </li>
+
         <!--<li class="cards__card">
             <a href="https://www.att.com/" class="card__link">
               <div class="card__image contain"
