Update officers to SP2018 officers

--- a/ACM_General/home/templates/home/officers.html
+++ b/ACM_General/home/templates/home/officers.html
@@ -14,13 +14,12 @@
    <ul class="cards">
     <li class="cards__card">
      <div class="card__image"
-      style="background-image: url({% static "home/img/officers/current/president.png" %})">
+      style="background-image: url({% static "home/img/core/acm.png" %})">
      </div>
      <div class="card__content">
        <div class="card_heading">
-         <h3 class="card__name">Eric Michalak</h3>
+         <h3 class="card__name">Steven Giangreco</h3>
          <h5 class="card__titles">President</h5>
-         <h5 class="card__titles">SIG-Security Chair</h5>
        </div>
       <div class="card__text">
        Year - Senior<br>
@@ -28,9 +27,9 @@
        Involvement - SIG-Security
       </div>
       <div class="card__links">
-       <a href="https://www.linkedin.com/in/eric-michalak-400907137/"
+       <a href="https://www.linkedin.com/in/steven-giangreco-42a1b5132"
         class="acm-btn">LinkedIn</a>
-       <a href="mailto:esmxv3@mst.edu"
+       <a href="mailto:smgrmd@mst.edu"
         class="acm-btn">Email</a>
       </div>
      </div>
@@ -38,22 +37,19 @@
 
     <li class="cards__card">
      <div class="card__image"
-      style="background-image: url({% static "home/img/officers/current/vicechair.jpg" %})">
+      style="background-image: url({% static "home/img/core/acm.png" %})">
      </div>
      <div class="card__content">
        <div class="card_heading">
-        <h3 class="card__name">Henry Wong</h3>
+        <h3 class="card__name">Joseph Kuhn</h3>
         <h5 class="card__titles">Vice President</h5>
       </div>
       <div class="card__text">
        Year - Sophomore<br>
        {# TODO: make this start of service and put like august, 2014 #}
-       Involvement - SIG-Game
       </div>
       <div class="card__links">
-       <a href="https://www.linkedin.com/in/henrycwong"
-        class="acm-btn">LinkedIn</a>
-       <a href="mailto:hcwqk7@mst.edu"
+       <a href="mailto:jck244@mst.edu"
         class="acm-btn">Email</a>
       </div>
      </div>
