--- a/ACM_General/home/static/home/scss/index.scss
+++ b/ACM_General/home/static/home/scss/index.scss
@@ -108,8 +108,7 @@ iframe {
   position: relative;
   width: 90%;
   height: 550px;
-  margin: 0 auto;
-  margin: 15px 0;
+  margin: 15px auto;
 }
 
 .events-link {
