--- a/ACM_General/home/static/home/scss/main.scss
+++ b/ACM_General/home/static/home/scss/main.scss
@@ -158,7 +158,8 @@ header {
 
 .header__logo a img {
   /* Allocate space */
-  height: 100%;
+  height: 70px;
+  width: 70px;
   /* Formatting */
   /* Cosmetics */
 }
@@ -446,7 +447,7 @@ footer {
   justify-content: space-between;
   max-width: 1000px;
   margin: 0 auto;
-  padding: 36px 10px 0 10px;
+  padding: 36px 20px 0 20px;
 }
 
 .footer-wrapper ul {
@@ -654,6 +655,10 @@ footer h5 {
   .top-bar {
     top: 0;
     display: block;
+  }
+
+  body {
+    margin-top: 56px;
   }
 
   main {
