--- a/ACM_General/home/templates/home/membership.html
+++ b/ACM_General/home/templates/home/membership.html
@@ -89,6 +89,7 @@
         </div>
       </div>
     
+      <p class="cash-text">To pay with cash, contact <a style="color:#2da1d8;" href="mailto:acm@mst.com?Subject=ACM Sponsorship" target="_top">acm@mst.edu</a> or visit any of ACM's main <a style="color:#2da1d8;" href="https://acm.mst.edu">events</a>.</p>
   </div>
   </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
