--- a/ACM_General/home/templates/home/index.html
+++ b/ACM_General/home/templates/home/index.html
@@ -7,6 +7,17 @@
 
 {% block body_content %}	
   <main>
+    <div class="content-wrapper membership-link">
+      <div class="membership-link__wrapper">
+        <img src="{% static "home/img/membership/creditcard.svg" %}">
+        <div class="membership-link__text">
+          <h2 style="color:rgba(0, 0, 0, .70); font-weight: normal">Become a Member of ACM</h2>
+          <div>
+            <a class="acm-btn" href="/membership/">Join Now</a>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- This is where upcoming events are automatically added -->
     {% if num_events != 0 %}
     {% include "home/upcoming-events.html" %}
