--- a/ACM_General/home/templates/home/sigs.html
+++ b/ACM_General/home/templates/home/sigs.html
@@ -4,6 +4,10 @@
 {% block head_title %}
   <title> ACM | SIGs </title>
 {% endblock %}
+{% block head_description %}
+  <meta name="description" content="Learn more about Missouri S&T's ACM Special Interest Groups."/>
+{% endblock %}
+
 {% block head_stylesheets %}
   <link rel="stylesheet" href="{% static "/home/css/sigs.css" %}"/>
 {% endblock %}
