--- a/ACM_General/home/templates/home/sponsors.html
+++ b/ACM_General/home/templates/home/sponsors.html
@@ -4,6 +4,10 @@
 {% block head_title %}
   <title> ACM | Sponsors </title>
 {% endblock %}
+{% block head_description %}
+  <meta name="description" content="Find out more about Missouri S&T's ACM Sponsors, and learn how to become one yourself."/>
+{% endblock %}
+
 {% block head_stylesheets %}
   <link rel="stylesheet" href="{% static "/home/css/sponsors.css" %}"/>
 {% endblock %}
@@ -57,34 +61,8 @@
               <p class="card__text">Bats, a CBOE company, is a global stock
               exchange operator based in Lenexa, Kansas. Currently, Bats is the
               second-largest U.S. equities market operator and operates
-              in both the U.S. and European markets.
+              in both the U.S. and European markets.</p>
         </li>
-
-        <!--<li class="cards__card">
-            <a href="https://www.att.com/" class="card__link">
-              <div class="card__image contain"
-                 style="background-image: url({% static "home/img/sponsors/AT&T_2016.png" %});"></div>
-              <h5 class="card__title">AT&T | Donor</h5>
-          </a>
-              <p class="card__text">AT&T Inc. is an American multinational
-                telecommunications conglomerate. AT&T is the second largest
-                provider of mobile telephone services and the largest provider
-                of fixed telephone services in the United States, and also
-                provides broadband subscription television services through
-                DirecTV.</p>
-        </li>
-        <li class="cards__card">
-            <a href="https://www.up.com/"
-                 class="card__link">
-            <div class="card__image"
-                 style="background-image: url({% static "home/img/sponsors/up_logo.gif" %});"></div>
-              <h5 class="card__title">Union Pacific | Contributor</h5>
-            </a>
-              <p class="card__text">The Union Pacific Railroad is a freight
-                hauling railroad that operates 8,500 locomotives over 32,100
-                route-miles in 23 states west of Chicago, Illinois and New
-                Orleans, Louisiana.</p>
-        </li>-->
       </ul>
     </div>
   </main>
