--- a/ACM_General/home/templates/home/upcoming-events.html
+++ b/ACM_General/home/templates/home/upcoming-events.html
@@ -5,7 +5,7 @@
     <div class="event-wrapper">
         <div class="event-card">
             <a href="{{ event.flier.url }}" class="flier-space">
-                <img src="{{ event.flier.url }}" />
+              <img src="{{ event.flier.url }}" alt="{{ event.title }} flier">
             </a>
             <div class="flier-info">
                 <h2>{{ event.title }}</h2>
