fixed static urls

--- a/ACM_General/home/templates/home/index.html
+++ b/ACM_General/home/templates/home/index.html
@@ -13,7 +13,7 @@
         <div class="membership-link__text">
           <h2 style="color:rgba(0, 0, 0, .70); font-weight: normal">Become a Member of ACM</h2>
           <div>
-            <a class="acm-btn" href="/membership/">Join Now</a>
+            <a class="acm-btn" href="{% url "home:membership" %}">Join Now</a>
           </div>
         </div>
       </div>
