--- a/ACM_General/home/static/home/scss/main.scss
+++ b/ACM_General/home/static/home/scss/main.scss
@@ -381,10 +381,20 @@ label:focus {
   margin: 0;
 }
 
+.message {
+  height: 100px;
+  overflow: hidden;
+  transition: .2s all ease-in-out;
+}
+
 .alert {
-  padding: 30px 40px;
+  height: 100px;
+  padding: 0 30px;
   font-size: 1.3em;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .alert-success {
@@ -393,6 +403,11 @@ label:focus {
 
 .alert-error {
   background-color: #eb625f;
+}
+
+.close-message {
+  cursor: pointer;
+  font-size: 35px;
 }
 
 /* =========================================================================
