--- a/ACM_General/events/static/events/css/create-event.css
+++ b/ACM_General/events/static/events/css/create-event.css
@@ -17,6 +17,12 @@ a {
     color: white;
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 input, textarea, option {
     font-size: 15px;
 }
