Add Union Pacific as a 'Donor' sponsor

--- a/ACM_General/home/templates/home/sponsors.html
+++ b/ACM_General/home/templates/home/sponsors.html
@@ -38,7 +38,7 @@
                 Kansas City, Missouri, they regularly account for 5% of the
                 total trading volume in the US stock market.</p>
         </li>
-        
+
         <li class="cards__card">
           <a href="https://www.garmin.com/" class="card__link">
             <div class="card__image"
@@ -53,15 +53,31 @@
         </li>
 
         <li class="cards__card">
-            <a href="https://bats.com/" class="card__link">
+          <a href="https://bats.com/" class="card__link">
             <div class="card__image contain"
                  style="background-image: url({% static "home/img/sponsors/bats-logo.png" %});"></div>
-              <h5 class="card__title">Bats | Donor</h5>
-              </a>
-              <p class="card__text">Bats, a CBOE company, is a global stock
-              exchange operator based in Lenexa, Kansas. Currently, Bats is the
-              second-largest U.S. equities market operator and operates
-              in both the U.S. and European markets.</p>
+            <h5 class="card__title">Bats | Donor</h5>
+          </a>
+          <p class="card__text">
+            Bats, a CBOE company, is a global stock exchange operator based in
+            Lenexa, Kansas. Currently, Bats is the second-largest U.S. equities
+            market operator and operates in both the U.S. and European markets.
+          </p>
+        </li>
+
+        <li class="cards__card">
+          <a href="https://www.up.com/" class="card__link">
+              <div class="card__image contain"
+                   style="background-image: url({% static "home/img/sponsors/up-square-logo.png" %});"></div>
+              <h5 class="card__title">Union Pacific | Donor</h5>
+          </a>
+          <p class="card__text">
+            Union Pacific Railroad is North America's premier railroad
+            franchise, covering 23 states across the western two-thirds of the
+            United States. They're more then just a railroad moving freight -
+            technology is at the core of everything they do and their computer
+            systems are as extensive as their rail system.
+          </p>
         </li>
       </ul>
     </div>
