--- a/ACM_General/tools/templates/tools/membership.html
+++ b/ACM_General/tools/templates/tools/membership.html
@@ -1,12 +1,10 @@
 {% load static %}
 <html>
   <head>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
-            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-            crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-          rel="stylesheet">
-    <link rel="stylesheet" href="{% static "/tools/css/bootstrap.min.css" %}"/>
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="{% static "tools/css/bootstrap.min.css" %}" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.0.4/fuse.min.js"></script>
   </head>
 
   <body>
